--- a/Department.Application/Department.Application.csproj
+++ b/Department.Application/Department.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Department.Core\Department.Core.csproj" />
+  </ItemGroup>
+
 </Project>
