--- a/Notification.Application/Notification.Application.csproj
+++ b/Notification.Application/Notification.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Notification.Core\Notification.Core.csproj" />
+  </ItemGroup>
+
 </Project>
