--- a/Notification.API/appsettings.json
+++ b/Notification.API/appsettings.json
@@ -2,11 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=notificationdb;User Id=sa;password=1234;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True;"
-  },
+  
+  
   "AllowedHosts": "*"
 }
