--- a/Notification.API/appsettings.json
+++ b/Notification.API/appsettings.json
@@ -6,7 +6,18 @@
       "Hangfire": "Information"
     }
   },
-  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=.;Database=notificationdb;User Id=<Your User>;password=<Your Password>;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True;",
+      "HangfireConnection": "Server=.;Database=hangfiredb;User Id=<Your User>;password=<Your Password>;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True;"
+    },
+    "email": {
+      "Sender": "<Your email>",
+      "stmp": "<Your host>",
+      "port": "<Your port>",
+      "username": "<Your user name>",
+      "password": "<Your Password>",
+      "UseSSL": false
+    },
   
   "AllowedHosts": "*"
 }
