--- a/Department.API/appsettings.json
+++ b/Department.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=departmentdb;User Id=<Your User>;password=<Your Password>;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
